--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "estraverse-fb",
-  "version": "1.3.0",
+  "version": "1.3.1",
   "description": "Drop-in for estraverse that enables traversal over React's JSX nodes.",
   "main": "estraverse-fb.js",
   "repository": "RReverser/estraverse-fb",
@@ -16,7 +16,7 @@
     "test": "mocha"
   },
   "peerDependencies": {
-    "estraverse": "^1.7.0"
+    "estraverse": "*"
   },
   "devDependencies": {
     "chai": "^1.9.1",
