--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
   "devDependencies": {
     "chai": "^1.9.1",
     "esprima-fb": "^8001.1001.0-dev-harmony-fb",
-    "estraverse": "^1.7.0",
+    "estraverse": "*",
     "mocha": "^1.20.0"
   }
 }
